# office-workflow

./: .gitignore  AgentScope_初学者手册.md  AgentScope_钩子与消息机制.md  DEVELOPMENT.md  README.md  chat.py  excel_compare.py  pyproject.toml  table.py
.opencode/plans/: PHASE6_IMPLEMENTATION_PLAN.md
.sisyphus/plans/: office-tools-flet.md
config/: settings.yaml
data/: app.db
docs/: ARCHITECTURE.md  FLET_GUIDE.md  PHASE3_README.md
examples/: 01_linear_chain.json  02_branch.json  03_loop_back_edge.json  04_parallel_merge.json  condition_example.json  loop_example.json
node_packages/comfyui-tools/: package.json
node_packages/data-helpers/: package.json
node_packages/flow-control/: package.json
node_packages/math-utils/: package.json
node_packages/preview-tools/: package.json
node_packages/rag-tools/: package.json  requirements.txt
node_packages/text-tools/: package.json
plugins/: __init__.py
plugins/agent_extensions/: __init__.py  plugin.json
plugins/sandbox_test/: __init__.py  plugin.json
plugins/test_widgets/: __init__.py  plugin.json
plugins/text_processing/: __init__.py
plugins/workflow_tools/: plugin.json
resources/: OfficeWorkflow.desktop
src/: __init__.py  main.py
src/agent/: __init__.py  agent_integration.py  api_key_manager.py  chat_history.py  mcp_server_manager.py  node_formatter.py  skill_manager.py  (+2 more)
tests/: __init__.py  conftest.py  test_agent_integration.py  test_api_key_manager.py  test_app_context.py  test_chat_history.py  test_chat_panel.py  test_config_manager.py  test_end_to_end.py  test_error_handler.py  test_event_bus.py  test_git_utils.py  test_inline_widgets.py  test_logger.py  test_models_extended.py  test_msg_serialization.py  test_multimodal_integration.py  test_node_engine.py  test_node_formatter.py  test_node_package_repository.py  test_node_sizing.py  test_package_loader.py  test_package_manager.py  test_performance.py  test_permission_manager.py  test_permission_proxy.py  test_plugin_manager.py  test_plugin_repository.py  test_plugin_system.py  test_sandbox.py  test_storage.py  test_streaming_hooks.py  test_theme.py  test_theme_manager.py  test_theme_refresh.py  test_widget_dual_input.py
workflows/: example.json  loop_test.json  默认工作流.json
(+96 files in other folders)
