[project]
name = "office"
version = "0.1.0"
description = "办公小工具整合平台 - AI对话操作 + 节点流编辑 + 插件化扩展"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "PySide6>=6.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "agentscope>=1.0.17",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-qt>=4.2.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
